# cs7631-mrs

./: .gitignore  README.md  flocking.nlogo  pyproject.toml
data/: flocking_250301.csv  flocking_250304.csv
data/1745096003/: spd1vis1sep1.csv  spd1vis1sep3.csv  spd1vis1sep5.csv  spd1vis1sep7.csv  spd1vis1sep9.csv
data/1745096036/: spd1vis1sep1.csv  spd1vis1sep3.csv  spd1vis1sep5.csv  spd1vis1sep7.csv  spd1vis1sep9.csv  spd1vis5sep1.csv  spd1vis5sep3.csv  spd1vis5sep5.csv  spd1vis5sep7.csv  spd1vis5sep9.csv  spd3vis1sep1.csv  spd3vis1sep3.csv  spd3vis1sep5.csv  spd3vis1sep7.csv  spd3vis1sep9.csv  spd3vis5sep1.csv  spd3vis5sep3.csv  spd3vis5sep5.csv  spd3vis5sep7.csv  spd3vis5sep9.csv  spd5vis1sep1.csv  spd5vis1sep3.csv  spd5vis1sep5.csv  spd5vis1sep7.csv  spd5vis1sep9.csv  spd5vis5sep1.csv  spd5vis5sep3.csv  spd5vis5sep5.csv  spd5vis5sep7.csv  spd5vis5sep9.csv  spd7vis1sep1.csv  spd7vis1sep3.csv  spd7vis1sep5.csv  spd7vis1sep7.csv  (+16 more)
learn/: learnS2A_030325.ipynb  learnS2A_032125.ipynb  learnS2A_040925-Copy1.ipynb  learnS2A_040925.ipynb  learnS2A_041425.ipynb  learnS2A_041925_sean.ipynb
mesa/: agents.py  agents_v1.py  app.py  collect.py  collect_analysis.py  model.py  n_agents.py  n_app.py  n_model.py
models/: 20250304_initial  20250304_n100_s2000  20250304_n200  20250304_n200_s2000  20250305_full  20250305_full_v2  20250305_v3_APR9run  20250305_v3_earlyStop_APR9run  20250305_v4_APR9run  20250305_v5_APR9run  20250414_revamp  20250414_v2  20250414_v3  20250418_v1  20250418_v1_working  20250419_v1  20250419_v3  20250419_v4  20250419_v5  20250420_v1  20250420_v2
(+786 files in other folders)
