[project]
name = "cs7631-mrs"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Fish",email = "seantfish@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mesa[rec] (>=3.1.4,<4.0.0)",
    "numpy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
