[project]
name = "cs7631-mrs"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Fish",email = "seantfish@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mesa[rec] @ https://github.com/projectmesa/mesa.git",
    "numpy",
    "scikit-learn",
    "network",
    "viz",
    "jupyterlab",
    "torch"
]


